Major refactor of dask code. Now uses dask arrays to load nd2 frame stacks, dask single-threaded scheduler to execute within one distributed dask task per FOV.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/191230 JQS Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/191230 JQS Segmentation.ipynb
@@ -140,18 +140,17 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "# filter/debug bad FOVs\n",
-    "# reduce churn/transfers\n",
-    "# set up benchmarking tool, compare different chunking\n",
+    "# measure task uses single-threaded scheduler internally, pass pluggable segment/measure filter funcs\n",
+    "# pin segmentation tasks to high-RAM nodes (in heterogenous dask cluster)\n",
+    "\n",
     "# arbitrary sequence of traces using initial segmentation (replace sandwich)\n",
     "# dry run without regionprops\n",
     "# fix regionprops memory usage\n",
-    "# optimize submission performance\n",
     "\n",
+    "# set up benchmarking tool, compare different chunking\n",
     "# BENCHMARK: try readahead buffering/chunk size\n",
     "# named_funcs_as_juxt: decorator to turn {'func1': func1, ('q0.5', 'q0.7'): partial(np.percentile, q=(0.5,0.7))} into a multiple-valued func\n",
     "# zarrification of labels (skip??)\n",
-    "# pin segmentation tasks to high-RAM nodes (in heterogenous dask cluster)\n",
     "\n",
     "# convert dask arrays to delayed before calling short_circuit_none (otherwise we wait until all frames are in RAM)\n",
     "# don't process FOV if too many labels"
@@ -290,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fluorescence_filenames = fluorescence_filenames[:50]"
+    "fluorescence_filenames = fluorescence_filenames[:10]"
    ]
   },
   {
@@ -311,7 +310,7 @@
     "data_graph = {}\n",
     "for photobleaching_filename in fluorescence_filenames[:]:\n",
     "    data_graph[photobleaching_filename] = segmentation.process_file(\n",
-    "        funcs, photobleaching_filename\n",
+    "        funcs, photobleaching_filename, time_slice=slice(None), rechunk=100\n",
     "    )\n",
     "\n",
     "# for photobleaching_filename in phase_filenames[:]:\n",
@@ -341,6 +340,70 @@
     "data_futures = {\n",
     "    k: {k2: client.compute(v2) for k2, v2 in v.items()} for k, v in data_graph.items()\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with dask.config.set(fuse_ave_width=2000):\n",
+    "    data_futures = {\n",
+    "        k: {k2: client.compute(v2) for k2, v2 in v.items()}\n",
+    "        for k, v in data_graph.items()\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del data_futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = next(iter(data_graph.values()))[0][\"traces\"][\"mean\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_optimize_function(dsk, keys):\n",
+    "    # print('>',dsk.keys())\n",
+    "    # print('>>',keys)\n",
+    "    # new_dsk, _ = dask.optimization.fuse(dsk)#, dependencies=keys)\n",
+    "    # new_dsk = dsk\n",
+    "    dsk1, deps = dask.optimization.cull(dsk, keys)\n",
+    "    dsk2 = dask.optimization.inline(dsk1, dependencies=deps)\n",
+    "    #     dsk3 = dask.optimization.inline_functions(dsk2, keys, [len, str.split],\n",
+    "    #                                               dependencies=deps)\n",
+    "    dsk4, deps = dask.optimization.fuse(dsk2)\n",
+    "    return dsk4\n",
+    "\n",
+    "\n",
+    "with dask.config.set(delayed_optimize=my_optimize_function):\n",
+    "    col2 = dask.optimize(col)[0]\n",
+    "col2.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(iter(data_graph.values()))[0][\"traces\"][\"mean\"].visualize(optimize_graph=True)"
    ]
   },
   {
@@ -390,7 +453,7 @@
    "outputs": [],
    "source": [
     "d = data[\n",
-    "    \"/n/scratch2/jqs1/190922/CFP_photobleaching/CFP_photobleaching_50pct_100ms.nd2_0054.nd2\"\n",
+    "    \"/n/scratch2/jqs1/190922/CFP_photobleaching/CFP_photobleaching_50pct_100ms.nd2_0082.nd2\"\n",
     "][0]"
    ]
   },
