--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/191230.2 JQS Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/191230.2 JQS Segmentation.ipynb
@@ -140,28 +140,20 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "# filter/debug bad FOVs\n",
-    "# reduce churn/transfers\n",
-    "# set up benchmarking tool, compare different chunking\n",
+    "# measure task uses single-threaded scheduler internally, pass pluggable segment/measure filter funcs\n",
+    "# pin segmentation/regionprops tasks to high-RAM nodes (in heterogenous dask cluster)\n",
+    "\n",
     "# arbitrary sequence of traces using initial segmentation (replace sandwich)\n",
     "# dry run without regionprops\n",
     "# fix regionprops memory usage\n",
-    "# optimize submission performance\n",
     "\n",
+    "# set up benchmarking tool, compare different chunking\n",
     "# BENCHMARK: try readahead buffering/chunk size\n",
     "# named_funcs_as_juxt: decorator to turn {'func1': func1, ('q0.5', 'q0.7'): partial(np.percentile, q=(0.5,0.7))} into a multiple-valued func\n",
     "# zarrification of labels (skip??)\n",
-    "# pin segmentation tasks to high-RAM nodes (in heterogenous dask cluster)\n",
     "\n",
     "# convert dask arrays to delayed before calling short_circuit_none (otherwise we wait until all frames are in RAM)\n",
     "# don't process FOV if too many labels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test"
    ]
   },
   {
@@ -170,10 +162,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ary = segmentation.nd2_to_dask(\n",
-    "    \"/n/scratch2/jqs1/190922/190922_photobleaching_greens/GFP_photobleaching_100pct_100ms_0001.nd2\",\n",
-    "    0,\n",
-    "    \"GFP-PENTA\",\n",
+    "def segmentation_frame_filter(img):\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def segmentation_labels_filter(labels, img):\n",
+    "    return labels.max() < 10000\n",
+    "\n",
+    "\n",
+    "segmentation_frame = delayed(get_frame)(coords)\n",
+    "labels = delayed(filter_decorator(segmentation_func, segmentation_labels_filter))(\n",
+    "    segmentation_frame\n",
     ")"
    ]
   },
@@ -183,82 +182,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = segmentation.segment(ary[0].compute())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels_delayed0 = dask.delayed(segmentation.segment)(ary[0].compute())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels_delayed = dask.delayed(segmentation.segment)(ary[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stack = ary[:10].compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u, z = segmentation.aggregate_dask(partial(np.mean, axis=1), labels, stack)\n",
-    "z[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u, z = segmentation.aggregate_dask(partial(np.mean, axis=1), labels, ary[:10])\n",
-    "z[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u, z = segmentation.aggregate_dask(partial(np.mean, axis=1), labels_delayed, ary)\n",
-    "z  # [0]#.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zz = z.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zz.shape"
+    "def foo(x):\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def foo2(x):\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def foo3(x):\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def filt1(x):\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def filt2(y, x):\n",
+    "    return"
    ]
   },
   {
@@ -266,6 +207,20 @@
    "metadata": {},
    "source": [
     "## Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def segmentation_frame_filter(img):\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def segmentation_labels_filter(labels, img):\n",
+    "    return labels.max() < 10000"
    ]
   },
   {
@@ -290,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fluorescence_filenames = fluorescence_filenames[:50]"
+    "fluorescence_filenames = fluorescence_filenames[:10]"
    ]
   },
   {
@@ -311,7 +266,12 @@
     "data_graph = {}\n",
     "for photobleaching_filename in fluorescence_filenames[:]:\n",
     "    data_graph[photobleaching_filename] = segmentation.process_file(\n",
-    "        funcs, photobleaching_filename\n",
+    "        funcs,\n",
+    "        photobleaching_filename,\n",
+    "        time_slice=slice(10),\n",
+    "        rechunk=True,\n",
+    "        segmentation_frame_filter=segmentation_frame_filter,\n",
+    "        segmentation_labels_filter=segmentation_labels_filter,\n",
     "    )\n",
     "\n",
     "# for photobleaching_filename in phase_filenames[:]:\n",
@@ -365,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/191229photobleaching.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/191230photobleaching.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
@@ -390,7 +350,7 @@
    "outputs": [],
    "source": [
     "d = data[\n",
-    "    \"/n/scratch2/jqs1/190922/CFP_photobleaching/CFP_photobleaching_50pct_100ms.nd2_0054.nd2\"\n",
+    "    \"/n/scratch2/jqs1/190922/CFP_photobleaching/CFP_photobleaching_50pct_100ms.nd2_0082.nd2\"\n",
     "][0]"
    ]
   },
