WIP segmentation autothresholding.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/200107 JQS Segmentation debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/200107 JQS Segmentation debugging.ipynb
@@ -201,9 +201,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext memory_profiler\n",
+    "%load_ext line_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -f segmentation.segment segmentation.segment(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%mprun -f segmentation.segment segmentation.segment(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "diag = matriarch_stub.tree()\n",
-    "labels = segmentation.segment(frame_crop, diagnostics=diag)"
+    "labels = segmentation.segment(frame2, diagnostics=diag)"
    ]
   },
   {
