Simplified segmention, now only does a blur and a high-pass, thresholds using threshold_li. This seems to be robust.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/200107 JQS Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/200107 JQS Segmentation.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(30)"
+    "cluster.scale(0)"
    ]
   },
   {
@@ -140,9 +140,11 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "# memory profile regionprops\n",
     "# fix autothresholding\n",
+    "# break up segment into sub-functions\n",
     "# handwrite frangi that works with float32, uint16 (github issue for float32 bug)\n",
+    "\n",
+    "# memory profile regionprops\n",
     "\n",
     "# tree() that records insertion times, utility func to turn into benchmarking for each step (hierarchical inter-step times)\n",
     "# split photobleaching task into multiple sub-tasks (each is a single-threaded .compute() call)\n",
