Segmentation working for all except one FOV onn FP fusion test dataset.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/200108 JQS Segmentation debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/200108 JQS Segmentation debugging.ipynb
@@ -139,17 +139,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filenames = ['/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0011.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0014.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0008.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R-G_GR/GR_100pct_100ms_100pct_100ms.nd2_0016.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/G_GR/GR_100pct_100ms_100pct_100ms.nd2_0019.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/G_GR/GR_100pct_100ms_100pct_100ms.nd2_0007.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0021.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0001.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0009.nd2',\n",
+    "#              '/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0005.nd2',]\n",
     "filenames = [\n",
-    "    \"/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0011.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0014.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R-G_RG/RG_100pct_100ms_100pct_100ms.nd2_0008.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R-G_GR/GR_100pct_100ms_100pct_100ms.nd2_0016.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/G_GR/GR_100pct_100ms_100pct_100ms.nd2_0019.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/G_GR/GR_100pct_100ms_100pct_100ms.nd2_0007.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0021.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0001.nd2\",\n",
-    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0009.nd2\",\n",
     "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0005.nd2\",\n",
+    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0017.nd2\",\n",
+    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0009.nd2\",\n",
+    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0001.nd2\",\n",
+    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0013.nd2\",\n",
+    "    \"/n/scratch2/jqs1/191312/R_RG/RG_100pct_100ms_100pct_100ms.nd2_0025.nd2\",\n",
     "]\n",
     "# nd2 = matriarch_stub.get_nd2_reader(filename)"
    ]
@@ -160,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2 = matriarch_stub.get_nd2_reader(filenames[-1])\n",
+    "nd2 = matriarch_stub.get_nd2_reader(filenames[3])\n",
     "frame = nd2.get_frame_2D(v=0, t=0, c=0)"
    ]
   },
@@ -196,6 +202,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = diag[\"img_flattened\"].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skimage.filters.threshold_otsu(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(x.flat, bins=300, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame > skimage.filters.threshold_yen(frame))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "t = skimage.filters.threshold_li(\n",
+    "    x,\n",
+    "    initial_guess=skimage.filters.threshold_yen,  # lambda arr: np.quantile(arr, 0.95),#np.median,#initial_guess=skimage.filters.threshold_otsu,\n",
+    "    tolerance=0.0001,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "t2 = skimage.filters.threshold_li(\n",
+    "    np.log(y), initial_guess=skimage.filters.threshold_otsu, tolerance=0.0001\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(np.log(y) > t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = x - x.min() + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(x > t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag = matriarch_stub.tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "diag = matriarch_stub.tree()\n",
     "labels = segmentation.segment(frame, diagnostics=diag)"
@@ -207,39 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "labels2 = segmentation.segment(frame, diagnostics=None, blur_sigma=1)\n",
-    "labels3 = segmentation.segment(frame, diagnostics=None, blur_sigma=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(60, 40))\n",
     "plt.imshow(matriarch_stub.permute_labels(labels))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(60, 40))\n",
-    "plt.imshow(matriarch_stub.permute_labels(labels2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(60, 40))\n",
-    "plt.imshow(matriarch_stub.permute_labels(labels3))"
    ]
   },
   {
