--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/200109 JQS Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/200109 JQS Segmentation.ipynb
@@ -102,6 +102,7 @@
     "    log_directory=\"/home/jqs1/projects/molecule-counting/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
+    "    job_extra=[\"-x compute-a-16-163,compute-a-16-164\"],\n",
     ")\n",
     "# diagnostics_port=('127.0.0.1', 8787),\n",
     "# env_extra=['export PYTHONPATH=\\\"/home/jqs1/projects/matriarch\\\"'])\n",
@@ -123,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(0)"
+    "# cluster.scale(30)\n",
+    "cluster.adapt(maximum=50)"
    ]
   },
   {
@@ -140,9 +142,11 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "# fix autothresholding\n",
+    "# fix autothresholding: use fraction of pixels covered by components between 100 and 2000 pixels, maximum, use as guess for threshold_li\n",
     "# break up segment into sub-functions\n",
     "# handwrite frangi that works with float32, uint16 (github issue for float32 bug)\n",
+    "\n",
+    "# jemalloc??\n",
     "\n",
     "# memory profile regionprops\n",
     "\n",
@@ -198,8 +202,10 @@
     "# TODO: try segmenting everything in phase (to reduce bias of segmenting in different channels)\n",
     "# G_GR  G_RG  G-R_GR  G-R_RG  R-G_GR  R_GR  R-G_RG  R_RG\n",
     "seg_channel_to_files = {\n",
-    "    \"RFP-PENTA\": [\"191312/R_RG/*.nd2\"],\n",
-    "    #'191312/R_GR/*.nd2'], # missing GFP-PENTA for all but one\n",
+    "    \"RFP-PENTA\": [\n",
+    "        \"191312/R_RG/*.nd2\",\n",
+    "        \"191312/R_GR/*.nd2\",\n",
+    "    ],  # missing GFP-PENTA for all but one\n",
     "    \"GFP-PENTA\": [\n",
     "        \"191312/G_GR/*.nd2\",\n",
     "        \"191312/G_RG/*.nd2\",\n",
@@ -217,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# segmentation.cluster_nd2_by_positions(glob(os.path.join(base_filename, '191312/R-G_GR/*.nd2')), ignored_channels=['BF'])"
+    "# segmentation.cluster_nd2_by_positions(glob(os.path.join(base_filename, '191312/R_GR/*.nd2')), ignored_channels=['BF'])"
    ]
   },
   {
@@ -244,6 +250,13 @@
     "            filenames, ignored_channels=[\"BF\"]\n",
     "        )\n",
     "        for channel_to_file in tqdm(clustered_filenames.values()):\n",
+    "            if segmentation_channel not in channel_to_file:\n",
+    "                print(\n",
+    "                    \"skipping {}, missing {}\".format(\n",
+    "                        channel_to_file, segmentation_channel\n",
+    "                    )\n",
+    "                )\n",
+    "                continue\n",
     "            segmentation_filename = channel_to_file[segmentation_channel]\n",
     "            channels = list(set(channel_to_file.keys()) - set([\"BF\"]))\n",
     "            d = {}\n",
@@ -254,7 +267,7 @@
     "                    photobleaching_channel=channel,\n",
     "                    segmentation_filename=segmentation_filename,\n",
     "                    segmentation_channel=segmentation_channel,\n",
-    "                    time_slice=slice(10),\n",
+    "                    time_slice=slice(None),\n",
     "                    rechunk=True,\n",
     "                    segmentation_frame_filter=segmentation_frame_filter,\n",
     "                    segmentation_labels_filter=segmentation_labels_filter,\n",
@@ -265,6 +278,7 @@
     "                \"segmentation_channel\": segmentation_channel,\n",
     "                \"segmentation_frame\": rep[\"segmentation_frame\"],\n",
     "                \"labels\": rep[\"labels\"],\n",
+    "                \"regionprops\": rep[\"regionprops\"],\n",
     "                \"traces\": {channel: d[channel][0][\"traces\"] for channel in channels},\n",
     "                \"photobleaching_filenames\": channel_to_file,\n",
     "            }\n",
@@ -316,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200107photobleaching.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/molecule-counting/200109photobleaching.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
@@ -345,6 +359,17 @@
     "    for k, v in data.items()\n",
     "    if k[0] != \"_\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "time.now()"
    ]
   },
   {
@@ -391,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.log(d[\"traces\"][\"GFP-PENTA\"][\"mean\"].T))"
+    "plt.plot(np.log(d[\"traces\"][\"RFP-PENTA\"][\"mean\"].T))"
    ]
   },
   {
