Added docstrings to most cell-generating functions.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/191208 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/191208 Prototyping.ipynb
@@ -22,8 +22,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import snakenmake\n",
-    "from snakenmake import *"
+    "import snakenmake as s"
    ]
   },
   {
@@ -214,7 +213,7 @@
    "source": [
     "def chip_metadata(**kwargs):\n",
     "    metadata = {}\n",
-    "    main_cell = chip(\n",
+    "    main_cell = s.chip(\n",
     "        \"my_chip\", **{\"metadata\": metadata, **kwargs, \"draw_trenches\": False}\n",
     "    )\n",
     "    return metadata[\"my_chip\"]"
@@ -228,7 +227,8 @@
    "source": [
     "coverslip_dims = np.array([55e3, 24e3])\n",
     "chip_dims = np.array([23e3, 13e3])\n",
-    "# chip_dims = np.array([35e3, 18e3])"
+    "chip_dims1 = np.array([40e3, 20e3])\n",
+    "chip_dims2 = np.array([25e3, 16e3])"
    ]
   },
   {
@@ -240,7 +240,9 @@
     "plt.figure(figsize=(10, 5))\n",
     "ax = plt.gca()\n",
     "ax.add_patch(plt.Rectangle(-coverslip_dims / 2, *coverslip_dims, fill=False))\n",
-    "ax.add_patch(plt.Rectangle(-chip_dims / 2, *chip_dims, fill=False))\n",
+    "ax.add_patch(plt.Rectangle(-chip_dims0 / 2, *chip_dims0, fill=False, ls=\"-.\"))\n",
+    "ax.add_patch(plt.Rectangle(-chip_dims1 / 2, *chip_dims1, fill=False, ls=\"--\"))\n",
+    "ax.add_patch(plt.Rectangle(-chip_dims2 / 2, *chip_dims2, fill=False))\n",
     "ax.set_xlim(-1.2 * coverslip_dims[0] / 2, 1.2 * coverslip_dims[0] / 2)\n",
     "ax.set_ylim(-1.2 * coverslip_dims[1] / 2, 1.2 * coverslip_dims[1] / 2)\n",
     "ax.set_aspect(\"equal\")"
@@ -252,20 +254,168 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def fovs_per_chip(\n",
+    "    fov,\n",
+    "    feeding_channel_width=None,\n",
+    "    trench_length=None,\n",
+    "    trench_gap=None,\n",
+    "    num_lanes=None,\n",
+    "    lane_with_trenches_length=None,\n",
+    "    **kwargs,\n",
+    "):\n",
+    "    hfovs = int(np.ceil(lane_with_trenches_length / fov[0]))\n",
+    "    y = 2 * trench_length + trench_gap\n",
+    "    unit_cell_height = y + feeding_channel_width\n",
+    "    trench_sets_per_fov = 2\n",
+    "    while True:\n",
+    "        delta_y = feeding_channel_width + trench_length\n",
+    "        if y + delta_y < fov[1]:\n",
+    "            y += delta_y\n",
+    "            unit_cell_height = y + trench_gap\n",
+    "            trench_sets_per_fov += 1\n",
+    "        else:\n",
+    "            break\n",
+    "        delta_y = trench_gap + trench_length\n",
+    "        if y + delta_y < fov[1]:\n",
+    "            y += delta_y\n",
+    "            unit_cell_height = y + feeding_channel_width\n",
+    "            trench_sets_per_fov += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    vfovs = int(np.ceil(num_lanes * 2 / trench_sets_per_fov))\n",
+    "    return np.array([hfovs, vfovs]), unit_cell_height, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov = np.array([5056, 2960]) * 4.25 / 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "metadata = {}\n",
-    "main_cell = chip(\n",
+    "main_cell = s.chip(\n",
     "    \"Big Snake\",\n",
-    "    snake,\n",
-    "    dims=chip_dims,\n",
+    "    s.snake,\n",
+    "    dims=chip_dims2,\n",
+    "    split=8,\n",
+    "    gap_lanes=1,\n",
+    "    feeding_channel_width=80,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=20,\n",
+    "    trench_width=1.5,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1.2e3,\n",
+    "    bottom_margin=1.2e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=metadata,\n",
+    ")\n",
+    "fovs, unit_cell_height, active_height = fovs_per_chip(fov, **metadata[\"Big Snake\"])\n",
+    "print(metadata)\n",
+    "print(\"FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "print(\"unit cell height:\", unit_cell_height)\n",
+    "print(\"active height: {} (margin: {})\".format(active_height, fov[1] - active_height))\n",
+    "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata = {}\n",
+    "main_cell = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.snake,\n",
+    "    dims=chip_dims2,\n",
+    "    split=8,\n",
+    "    gap_lanes=1,\n",
+    "    feeding_channel_width=70,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=15,\n",
+    "    trench_length=45,\n",
+    "    trench_width=1.5,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1e3,\n",
+    "    bottom_margin=1e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=metadata,\n",
+    ")\n",
+    "fovs, unit_cell_height, active_height = fovs_per_chip(fov, **metadata[\"Big Snake\"])\n",
+    "print(metadata)\n",
+    "print(\"FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "print(\"unit cell height:\", unit_cell_height)\n",
+    "print(\"active height: {} (margin: {})\".format(active_height, fov[1] - active_height))\n",
+    "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata = {}\n",
+    "main_cell = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.snake,\n",
+    "    dims=chip_dims1,\n",
+    "    split=8,\n",
+    "    gap_lanes=1,\n",
+    "    feeding_channel_width=80,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=20,\n",
+    "    trench_width=1.5,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1.9e3,\n",
+    "    bottom_margin=1.9e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=metadata,\n",
+    ")\n",
+    "fovs, unit_cell_height, active_height = fovs_per_chip(fov, **metadata[\"Big Snake\"])\n",
+    "print(metadata)\n",
+    "print(\"FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "print(\"unit cell height:\", unit_cell_height)\n",
+    "print(\"active height: {} (margin: {})\".format(active_height, fov[1] - active_height))\n",
+    "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata = {}\n",
+    "main_cell = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.snake,\n",
+    "    dims=chip_dims0,\n",
     "    split=3,\n",
     "    feeding_channel_width=90,\n",
     "    trench_spacing=2,\n",
-    "    lane_gap=20,\n",
+    "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
+    "fovs, unit_cell_height, active_height = fovs_per_chip(fov, **metadata[\"Big Snake\"])\n",
     "print(metadata)\n",
+    "print(\"FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "print(\"unit cell height:\", unit_cell_height)\n",
+    "print(\"active height: {} (margin: {})\".format(active_height, fov[1] - active_height))\n",
     "plot_cell(main_cell)"
    ]
   },
@@ -276,53 +426,23 @@
    "outputs": [],
    "source": [
     "metadata = {}\n",
-    "main_cell = chip(\n",
+    "main_cell = s.chip(\n",
     "    \"Big Snake\",\n",
-    "    snake,\n",
-    "    dims=chip_dims,\n",
+    "    s.snake,\n",
+    "    dims=chip_dims0,\n",
     "    split=3,\n",
     "    feeding_channel_width=45,\n",
     "    trench_spacing=2.2,\n",
-    "    lane_gap=17,\n",
+    "    trench_gap=17,\n",
     "    trench_width=1.5,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
+    "fovs, unit_cell_height, active_height = fovs_per_chip(fov, **metadata[\"Big Snake\"])\n",
     "print(metadata)\n",
-    "plot_cell(main_cell)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import snakenmake\n",
-    "from snakenmake import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata = {}\n",
-    "main_cell = chip(\n",
-    "    \"Big Snake\",\n",
-    "    snake,\n",
-    "    dims=chip_dims,\n",
-    "    split=8,\n",
-    "    gap_lanes=2,\n",
-    "    feeding_channel_width=80,\n",
-    "    trench_spacing=2,\n",
-    "    trench_gap=15,\n",
-    "    trench_width=1.5,\n",
-    "    draw_trenches=False,\n",
-    "    metadata=metadata,\n",
-    ")\n",
-    "print(metadata)\n",
+    "print(\"FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "print(\"unit cell height:\", unit_cell_height)\n",
+    "print(\"active height: {} (margin: {})\".format(active_height, fov[1] - active_height))\n",
     "plot_cell(main_cell)"
    ]
   },
@@ -348,38 +468,57 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "from snakenmake import *\n",
-    "\n",
     "metadata = {}\n",
+    "base_params = dict(\n",
+    "    dims=chip_dims2,\n",
+    "    split=8,\n",
+    "    gap_lanes=1,\n",
+    "    trench_length=35,\n",
+    "    feeding_channel_width=80,\n",
+    "    trench_gap=20,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1.2e3,\n",
+    "    bottom_margin=1.2e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=True,\n",
+    "    metadata=metadata,\n",
+    ")\n",
     "params = [\n",
-    "    dict(split=4, fc=40, w=1.4, ts=1.6, lg=10),\n",
-    "    dict(split=4, fc=40, w=1.4, ts=1.1, lg=10),\n",
-    "    dict(split=4, fc=40, w=1.4, ts=1.1, lg=10),\n",
-    "    dict(split=8, fc=40, w=1.4, ts=1.6, lg=10),\n",
-    "    dict(split=8, fc=40, w=1.4, ts=1.1, lg=10),\n",
-    "    dict(split=8, fc=40, w=1.4, ts=1.1, lg=10),\n",
+    "    dict(trench_width=1.4, trench_spacing=2.1, **base_params),\n",
+    "    dict(trench_width=1.4, trench_spacing=2.1, **base_params),\n",
+    "    dict(trench_width=1.4, trench_spacing=1.1, **base_params),\n",
+    "    {\n",
+    "        **base_params,\n",
+    "        **dict(\n",
+    "            trench_width=1.5,\n",
+    "            trench_spacing=2.1,\n",
+    "            trench_length=45,\n",
+    "            trench_gap=15,\n",
+    "            feeding_channel_width=70,\n",
+    "            top_margin=1e3,\n",
+    "            bottom_margin=1e3,\n",
+    "        ),\n",
+    "    },\n",
+    "    dict(trench_width=1.2, trench_spacing=2.1, **base_params),\n",
+    "    dict(trench_width=1.2, trench_spacing=2.1, **base_params),\n",
     "]\n",
+    "# params = [dict(split=4, fc=40, w=1.4, ts=1.6, tg=10), dict(split=4, fc=40, w=1.4, ts=1.1, tg=10), dict(split=4, fc=40, w=1.4, ts=1.1, tg=10),\n",
+    "#          dict(split=8, fc=40, w=1.4, ts=1.6, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10)]\n",
     "chips = [\n",
-    "    chip(\n",
-    "        \"Basilisk S{split} FC{fc} L35 W{w} TS{ts} LG{lg}\".format(**params),\n",
-    "        snake,\n",
-    "        split=params[\"split\"],\n",
-    "        feeding_channel_width=params[\"fc\"],\n",
-    "        trench_spacing=params[\"ts\"],\n",
-    "        lane_gap=params[\"lg\"],\n",
-    "        tick_labels=False,\n",
-    "        ticks=True,\n",
-    "        tick_length=4,\n",
-    "        tick_margin=3,\n",
-    "        text=True,\n",
-    "        draw_trenches=True,\n",
-    "        metadata=metadata,\n",
+    "    s.chip(\n",
+    "        \"Basilisk S{split} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}\".format(\n",
+    "            **params\n",
+    "        ),\n",
+    "        s.snake,\n",
+    "        **params,\n",
     "    )\n",
     "    for params in params\n",
     "]\n",
     "# chips = [chips[0]]*6\n",
-    "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True, mask=True)\n",
-    "write_gds(main_cell, \"181116basilisk.gds\")"
+    "main_cell = s.wafer(\n",
+    "    chips, \"Basilisk \\n YG/JQS 191212\", text=True, mask=False, chip_area_margin=1e3\n",
+    ")\n",
+    "write_gds(main_cell, \"191212basilisk.gds\")"
    ]
   },
   {
@@ -406,15 +545,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cell(snakenmake.mask_alignment_cross())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "metadata"
    ]
   },
@@ -426,13 +556,6 @@
    "source": [
     "plot_cell(chips[5])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
