[shenker/snakenbake] WIP manifold snake design. Switched to ladder manifold, only implemented inlet side. All junctions are right-angled.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/200131 Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/200131 Single-input Basilisk.ipynb
@@ -45,7 +45,7 @@
     "def plot_cell(cell, exclude=(2,)):\n",
     "    # FROM: https://github.com/heitzmann/gdspy/issues/42\n",
     "    poly_dict = cell.get_polygons(by_spec=True)\n",
-    "    plt.figure(figsize=(20, 12))\n",
+    "    plt.figure(figsize=(40, 20))\n",
     "    for layer_datatype, polys in poly_dict.items():\n",
     "        if layer_datatype[0] in exclude:\n",
     "            continue\n",
@@ -59,6 +59,31 @@
     "    for cell in [main_cell] + list(main_cell.get_dependencies(True)):\n",
     "        writer.write_cell(cell)\n",
     "    writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.sqrt(1**2 + np.arange(10) ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(a + a[::-1])"
    ]
   },
   {
@@ -81,17 +106,18 @@
     "    s.manifold_snake,\n",
     "    dims=chip_dims,\n",
     "    split=None,\n",
-    "    num_inputs=1,\n",
+    "    num_inputs=3,\n",
     "    lanes_per_snake=5,\n",
-    "    manifold_margin=0.5e3,\n",
-    "    manifold_radius=2e3,\n",
-    "    feeding_channel_width=400,\n",
+    "    manifold_width=100,\n",
+    "    manifold_input_length=0.5e3,\n",
+    "    manifold_margin=100,\n",
+    "    feeding_channel_width=40,\n",
     "    trench_spacing=2,\n",
     "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
-    "    port_margin=1.5e3,\n",
+    "    port_margin=0.5e3,\n",
     "    top_margin=1.2e3,\n",
-    "    bottom_margin=1.2e3,\n",
+    "    bottom_margin=0.6e3,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
