[shenker/snakenbake] WIP manifold snake design. Inlet side of manifold working. Added bend in last connection.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/200131 Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/200131 Single-input Basilisk.ipynb
@@ -99,6 +99,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cell = gdspy.Cell(\"main2\")\n",
+    "cell.add(\n",
+    "    gdspy.Round((0, 0), 20, initial_angle=2 / 2 * np.pi, final_angle=3 / 2 * np.pi)\n",
+    ")\n",
+    "plot_cell(cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "metadata = {}\n",
     "chip_dims = np.array([40e3, 20e3])\n",
     "main_cell = s.chip(\n",
@@ -107,7 +120,7 @@
     "    dims=chip_dims,\n",
     "    split=None,\n",
     "    num_inputs=3,\n",
-    "    lanes_per_snake=5,\n",
+    "    lanes_per_snake=3,\n",
     "    manifold_width=100,\n",
     "    manifold_input_length=0.5e3,\n",
     "    manifold_margin=100,\n",
